Bug 47311 - EDITING: Crash copy one or more cells in more than one sheet
Summary: EDITING: Crash copy one or more cells in more than one sheet
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.1 release
Hardware: All Windows (All)
: medium major
Assignee: David Tardon
URL:
Whiteboard: target:3.6.0 target:3.5.7
Keywords:
: 47814 53483 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-14 08:44 UTC by m_a_riosv
Modified: 2014-12-14 08:52 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description m_a_riosv 2012-03-14 08:44:34 UTC
In a new spreadsheet.

Introduce in Sheet1:
A1:    1
Select A1, copy (Ctrl-C)
Select Sheet2
Paste
Ok!
Select Sheet1 and Sheet2 (Shift+click)
Paste
Crash!
Select Sheet2 and Sheet3 (Shift+click)
Paste
Crash!
Comment 1 David Tardon 2012-03-15 01:44:48 UTC
looks like forgotten "% rClipTabs.size()"
Comment 2 Not Assigned 2012-03-15 01:50:32 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=32dc82b9d456ed92ba946611239349ab0e424e2a

fdo#47311 don't crash when pasting into more than 1 sheet
Comment 3 m_a_riosv 2012-03-15 15:13:31 UTC
Thanks so much David, quicker impossible.
Comment 4 David Tardon 2012-03-25 03:37:19 UTC
*** Bug 47814 has been marked as a duplicate of this bug. ***
Comment 5 David Tardon 2012-08-14 11:33:20 UTC
*** Bug 53483 has been marked as a duplicate of this bug. ***
Comment 6 Not Assigned 2012-08-16 09:51:58 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=38d18fcd644fafeb0234a1804563853a17b47c4f&g=libreoffice-3-5

fdo#47311 don't crash when pasting into more than 1 sheet


It will be available in LibreOffice 3.5.7.