fdo#47311 don't crash when pasting into more than 1 sheet